--- a/style.css
+++ b/style.css
@@ -127,6 +127,16 @@ body {
   justify-content: space-between;
 }
 
+.score-fix {
+  margin: 80px 0 0;
+  display: flex;
+  justify-content: center;
+}
+
+.footer-players-fix {
+  display: flex;
+  justify-content: space-between;
+}
 
 .mt-20 {
   margin: 20px 0 0;
